data/derived/comb/progs/unify/prog5673.ml.out
Characters 71-72:
  | h::t -> h n + sumList(t xs);;
                          ^
Error: This expression has type ('a -> int) list
       This is not a function; it cannot be applied.
